saved config retrieved

--- a/php/config.json
+++ b/php/config.json
@@ -1,10 +1,11 @@
 {
     "name": "Sleiman",
-    "zip": "H2V0A2",
+    "city_name": "Montreal",
+    "nyt_api_key": "7UP2SBJgcBERwN72cuKscL3DQX3CeBik",
+    "openweather_api_key": "ba24c6018ddd72041749018d0c1b1ef8",
     "subjects": [
-        "sports",
-        "travel"
+        "politics",
+        "sports"
     ],
-    "id": 1461768553468,
-    "nyt_api_key": "7UP2SBJgcBERwN72cuKscL3DQX3CeBik"
+    "id": 1596729084645
 }
